# Video-Annotator

./: .gitignore  Makefile  docker-compose.yml  package-lock.json  render.yaml
backend/: Dockerfile  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt
backend/checkpoints/: download_ckpts.sh
backend/models/: annotation.py  config_labels.py  inference_sam.py
backend/routers/: annotations.py  config.py  inference_sam.py  metadata.py  videos.py
backend/sam2/: __init__.py
backend/sam2/csrc/: .ninja_deps  .ninja_log  build.ninja
backend/sam2/utils/: transforms.py
backend/services/: annotation.py  inference_sam.py  label.py  metadata.py  video.py
backend/utils/: multipart.py
data/: actionLabels.json  objectLabels.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  main.tsx  styles.css
frontend/src/api/: annotations.ts  base.ts  index.ts  labels.ts  metadata.ts  prediction.ts  videos.ts
frontend/src/app/: useAppController.ts
frontend/src/common/: actions.ts  colors.ts  mask.ts
frontend/src/components/: ActionTable.tsx  ConfigurationPanel.tsx  LabelTimeline.tsx  PreviewPanel.tsx  SideMenu.tsx  TimelineSection.tsx  VideoPanel.tsx  WaveformTimeline.tsx
frontend/src/features/history/: index.ts  types.ts
frontend/src/features/labels/: index.ts  types.ts
frontend/src/features/prediction/: index.ts  types.ts
frontend/src/features/ui/: index.ts  (+1 more)
frontend/src/utils/: actions.ts  colors.ts  labelConfig.ts  mask.ts  multipartStream.ts
(+63 files in other folders)
